--- a/build
+++ b/build
@@ -5,9 +5,9 @@ mkdir -p dist
 cat src/voronoi.ls src/convex.ls src/face.ls src/polygon.ls src/exports.ls > dist/voronoi.ls
 
 echo "build src/voronoi.ls -> dist/voronoi.js ..."
-npx lsc -cp --no-header dist/voronoi.ls > dist/voronoi.js
+./node_modules/.bin/lsc -cp --no-header dist/voronoi.ls > dist/voronoi.js
 echo "minifying voronoi.js ..."
-npx uglifyjs dist/voronoi.js > dist/voronoi.min.js
+./node_modules/.bin/uglifyjs dist/voronoi.js -m -c > dist/voronoi.min.js
 
 rm dist/voronoi.ls
 
